data/documentations/numpy/numpy/typing/tests/data/pass/comparisons_py.comment
['text':' Arrays','line_number':37,'multiline':False]
['text':' Time structures','line_number':82,'multiline':False]
['text':' boolean','line_number':93,'multiline':False]
['text':' Complex','line_number':111,'multiline':False]
['text':' Float','line_number':169,'multiline':False]
['text':' Int','line_number':219,'multiline':False]
