data/documentations/numpy/numpy/typing/tests/data/fail/shape_base_pyi.comment
['text':' E: No overload variant','line_number':8,'multiline':False]
